syntax = "proto3";
package pratikasr.trustregistry.v1;

option go_package = "github.com/pratikasr/trustregistry";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message TrustRegistry {
  string did = 1;
  string controller = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  google.protobuf.Timestamp created = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp modified = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  int64 deposit = 5;
  string aka = 6;
  int32 active_version = 7;
  string language = 8;
}

message GovernanceFrameworkVersion {
  string id = 1;
  string tr_did = 2;
  google.protobuf.Timestamp created = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  int32 version = 4;
  google.protobuf.Timestamp active_since = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

message GovernanceFrameworkDocument {
  string id = 1;
  string gfv_id = 2;
  google.protobuf.Timestamp created = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  string language = 4;
  string url = 5;
  string hash = 6;
}

// Params defines the parameters of the module.
message Params {
  uint64 max_did_length = 1;
  uint64 max_language_length = 2;
  uint64 max_url_length = 3;
  uint64 max_hash_length = 4;
}

// GenesisState is the state that must be provided at genesis.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated TrustRegistry trust_registries = 2 [(gogoproto.nullable) = false];
}